--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "trackme",
+  "name": "api.js",
   "version": "1.0.0",
-  "description": "A web interface to view TrackMe data",
-  "main": "server.js",
+  "description": "",
+  "main": "npm install express --save",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon -r dotenv/config api.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,10 @@
   "author": "Utsav",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.8"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
